2011-03-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/extra/flickrfavlist.py: Included an extra script for
	  flickr fav list.

2011-03-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/plugin.py: Added support for auth info on the Plugin
	  Treeview.

2011-03-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/facebook.py: Added support for 'News Feed' and 'Wall'.

2011-03-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/facebook.py: Added support for Facebook Authentication.

2011-03-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/facebook.py: Added support for Facebook Album.

2011-02-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/gphotoframe.schemas.in: Removed an obsolete gconf key:
	  ban_icon_enabled.
	* plugins/shotwell.py: Added a description field on shotwell photo
	  source dialog.
	* preferences/__init__.py: Added checking for double instances of
	  preferences.
	* photosource.py: Fixed a cursor lost problem.
	* liststore.py (PhotoListStore._show_photo_cb): Added checking for
	  recursion depth.

2011-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/photosource.py: Added support for double clicking on
	  Photo Source Treeview to open Photo Source Dialog.

2011-02-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photosource.py, gphotoframe.ui: Added icons on photo source ComboBox.

2011-02-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, photosource.py, treeview.py: Added icons on photo
	  source treeview.
	* liststore.py, plugins/base/base.py: Added delays for accessing API.

2011-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py: Added checking if the menu is pop-upped.
	* actor/trash.py: Added checking if the trash dialog is shown.
	* liststore.py, frame.py: Added checking if the mouse pointer is
	  on the photo frame.

2011-02-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actor/trash.py: Modified trash dialog messages.